# hacking2_game_of_chance

./: CMakeLists.txt  README.md  game_of_chance.c  helper.c  helper.h
